# web_scrapper

./: Cargo.toml  README.md
src_python/: multicolorrecords.com_content.json  scrapper.py  setup.py
src_rust/: exporter.rs  main.rs  scrapper.rs  setup.rs
