[package]
name = "scraper_project"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
scraper = "0.13"
fantoccini = "0.26"
calamine = "0.17"
docx-rs = "0.4"
printpdf = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
